# hotwars_apitest

./: .travis.yml  README.md  pyproject.toml
hogwarts_apitest/: number.py
tests/: test_core.py
