[tool.poetry]
name = "hotwars_apitest"
version = "0.1.0"
description = ""
authors = ["smallapple_by <biyong199458@163.com>"]

[tool.poetry.dependencies]
python = "^3.5"
pytest = "^6.0.1"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
